PROJECT(GVTCORE)
cmake_minimum_required(VERSION 2.8)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

FILE(GLOB_RECURSE GVT_SRC ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.C)
FILE(GLOB_RECURSE GVT_HDR ${PROJECT_SOURCE_DIR}/*.h ${PROJECT_SOURCE_DIR}/*.hpp)
LIST(REMOVE_ITEM GVT_SRC ${PROJECT_SOURCE_DIR}/MPI/*.C ${PROJECT_SOURCE_DIR}/SINGLE/*.C)
LIST(REMOVE_ITEM GVT_HDR ${PROJECT_SOURCE_DIR}/MPI/*.h ${PROJECT_SOURCE_DIR}/SINGLE/*.h)

FILE(GLOB_RECURSE GVT_MPI_COMPONENTS ${PROJECT_SOURCE_DIR}/MPI/*.C ${PROJECT_SOURCE_DIR}/MPI/*.h)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${GVT_SRC} ${GVT_HDR} ${GVT_MPI_COMPONENTS})
#SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
TARGET_LINK_LIBRARIES(${PROJECT_NAME})
SET(${PROJECT_NAME}_INCLUDE_DIRS ${PROJECT_SOURCE_DIR} ${Boost_INCLUDE_DIRS} CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
CONFIGURE_LIB_MPI()





