PROJECT(GVTCORE)
cmake_minimum_required(VERSION 2.6)


FIND_PACKAGE(Manta REQUIRED)
#include(CheckCXXCompilerFlag)
#CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
#CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
#IF(COMPILER_SUPPORTS_CXX11)
#	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#ELSEIF(COMPILER_SUPPORTS_CXX0X)
#	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -gstd=c++0x")
#ELSE()
#        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
#ENDIF()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

FILE(GLOB_RECURSE GVT_SRC ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.C)
FILE(GLOB_RECURSE GVT_HDR ${PROJECT_SOURCE_DIR}/*.h ${PROJECT_SOURCE_DIR}/*.hpp)
LIST(REMOVE_ITEM GVT_SRC ${PROJECT_SOURCE_DIR}/MPI/*.C ${PROJECT_SOURCE_DIR}/SINGLE/*.C)
LIST(REMOVE_ITEM GVT_HDR ${PROJECT_SOURCE_DIR}/MPI/*.h ${PROJECT_SOURCE_DIR}/SINGLE/*.h)

FILE(GLOB_RECURSE GVT_MPI_COMPONENTS ${PROJECT_SOURCE_DIR}/MPI/*.C ${PROJECT_SOURCE_DIR}/MPI/*.h)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${GVT_SRC} ${GVT_HDR} ${GVT_MPI_COMPONENTS})
#SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MANTA_TARGET_LINK_LIBRARIES} ${Boost_LIBRARIES})
SET(${PROJECT_NAME}_INCLUDE_DIRS ${PROJECT_SOURCE_DIR} ${Boost_INCLUDE_DIRS} CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
CONFIGURE_LIB_MPI()





