PROJECT(GVTMANTA)
cmake_minimum_required(VERSION 2.6)
SET(GVT_BE_MANTA ON CACHE BOOL "Build Manta Backend")

IF (GVT_BE_MANTA)
    FIND_PACKAGE(Manta REQUIRED)

    #set(Boost_USE_STATIC_LIBS        ON) # only find static libs
    set(Boost_USE_MULTITHREADED      ON)
    #set(Boost_USE_STATIC_RUNTIME    OFF)


    find_package(Boost COMPONENTS system thread timer REQUIRED)
    include_directories(${Boost_INCLUDE_DIRS})

    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
    INCLUDE_DIRECTORIES(${GVTCORE_INCLUDE_DIRS})

    FILE(GLOB_RECURSE GVT_BE_MANTA_SRC ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.C)
    FILE(GLOB_RECURSE GVT_BE_MANTA_HDR ${PROJECT_SOURCE_DIR}/*.h ${PROJECT_SOURCE_DIR}/*.hpp)

    ADD_LIBRARY(${PROJECT_NAME} STATIC ${GVT_BE_MANTA_SRC} ${GVT_BE_MANTA_HDR} )
    #SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} GVTCORE ${MPI_LIBRARIES}  ${MANTA_TARGET_LINK_LIBRARIES} ${Boost_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_TIMER_LIBRARY}) 
    SET(${PROJECT_NAME}_INCLUDE_DIRS ${PROJECT_SOURCE_DIR} ${GVTCORE_INCLUDE_DIRS} CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)

    CONFIGURE_LIB_MPI()

ENDIF()
